# autoware_msgs

./: README.md
autoware_msgs/: CMakeLists.txt  package.xml
autoware_msgs/msg/: Gear.msg  VehicleStatus.msg
